[package]
name = "rustyHPSDR"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.9", package =  "gtk4", features = ["v4_12"] }
gdk-pixbuf = "0.20"
cairo-rs = "0.20"
pango = "0.20"
pangocairo = "0.20"
glib = "0.20"
tokio = { version = "1", features = ["full"] }
network-interface = "2.0.0"
nix = { version = "0.29.0", features = ["socket"] }
rustfft = "6.1"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
ron = "0.10"
dirs = "6.0"
alsa = "0.9"

